# MacFleet

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODOS.md  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: cli.md  index.md
docs/designs/: v3-cathedral.md
docs/getting-started/: installation.md  pairing.md  quickstart.md
docs/guides/: dashboard.md  tasks.md  train.md
docs/reference/: protocol.md  security.md
macfleet/: __init__.py
macfleet/cli/: __init__.py  main.py
macfleet/comm/: __init__.py  collectives.py  protocol.py  transport.py
macfleet/compression/: __init__.py  adaptive.py  pipeline.py  quantize.py  topk.py
macfleet/compute/: __init__.py  dispatch.py  models.py  registry.py  worker.py
macfleet/engines/: __init__.py  base.py  mlx_engine.py  serialization.py  torch_engine.py
macfleet/monitoring/: __init__.py  agent_adapter.py  dashboard.py  health.py  thermal.py  thermal_pause.py  throughput.py
macfleet/pool/: __init__.py  agent.py  discovery.py  heartbeat.py  network.py  registry.py  scheduler.py
macfleet/sdk/: __init__.py  decorators.py  pool.py  train.py
macfleet/security/: __init__.py  auth.py  bootstrap.py
macfleet/training/: __init__.py  data_parallel.py  guards.py  loop.py  sampler.py
macfleet/utils/: atomic_write.py
tests/: conftest.py
tests/test_cli/: test_pair.py  test_quickstart_and_doctor.py
tests/test_comm/: test_collectives.py  test_protocol.py  test_transport.py
tests/test_compression/: test_adaptive.py  test_compression.py
tests/test_compute/: test_dispatch.py  test_models.py  test_protocol_types.py
tests/test_engines/: test_base.py  test_mlx_engine.py  test_torch_engine.py
tests/test_failure_injection/: test_peer_dropout.py  test_security_attacks.py
tests/test_fuzz/: test_fuzz_array_serialization.py  test_fuzz_hw_exchange.py  test_fuzz_task_spec.py  test_fuzz_wire_message.py
tests/test_integration/: test_end_to_end.py  test_multi_process.py
tests/test_monitoring/: test_agent_adapter.py  test_dashboard.py  test_health.py  test_thermal_pause.py  test_throughput.py
tests/test_pool/: test_heartbeat.py  test_network.py  test_port_split.py  test_registry.py  test_scheduler.py
tests/test_production/: test_multi_node_convergence.py
tests/test_sdk/: test_pool_distributed.py  test_pool_task_dispatch.py  test_sdk.py
tests/test_security/: test_auth.py  test_authenticated_heartbeat.py  test_authenticated_transport.py  test_fleet_discovery.py  test_heartbeat_with_hw.py  test_hw_exchange.py
tests/test_stress/: test_stress_allreduce.py  test_stress_dispatch.py  test_stress_registry.py
tests/test_training/: test_data_parallel.py  test_guards.py  test_sampler.py
tests/test_utils/: test_atomic_write.py
tools/: compare_traces.py  two_mac_demo.py  two_mac_demo_verbose.py  two_mac_real_train.py  two_mac_traced_train.py
