[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macfleet"
version = "2.1.1"
description = "Pool Apple Silicon Macs for distributed compute and ML training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MacFleet Contributors"}
]
keywords = [
    "distributed", "machine-learning", "apple-silicon", "mps", "mlx",
    "pytorch", "training", "gpu-pooling", "data-parallel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "zeroconf>=0.131.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "msgpack>=1.0.0",
    "cloudpickle>=3.0.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1.0"]
mlx = ["mlx>=0.5.0"]
yaml = ["pyyaml>=6.0"]
all = ["torch>=2.1.0", "mlx>=0.5.0", "pyyaml>=6.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
macfleet = "macfleet.cli.main:cli"

[project.urls]
Homepage = "https://github.com/vikranthreddimasu/MacFleet"
Documentation = "https://github.com/vikranthreddimasu/MacFleet#readme"
Repository = "https://github.com/vikranthreddimasu/MacFleet"
Issues = "https://github.com/vikranthreddimasu/MacFleet/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["macfleet*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
