[build-system]
requires = ["setuptools>=61.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macfleet"
version = "2.2.0rc1"
description = "Pool Apple Silicon Macs for distributed compute and ML training"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "MacFleet Contributors"}
]
keywords = [
    "distributed", "machine-learning", "apple-silicon", "mps", "mlx",
    "pytorch", "training", "gpu-pooling", "data-parallel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "zeroconf>=0.131.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
    "msgpack>=1.0.0",
    "cloudpickle>=3.0.0",
    # cryptography is core because TLS is mandatory when fleet auth is enabled
    # (SecurityConfig forces tls=True whenever a token is set). See v2.2 PR 3
    # (Issue 9 + 21): native X.509 cert generation in-memory, no openssl subprocess.
    "cryptography>=42.0.0",
    # pydantic is core starting v2.2 PR 7 (Issue 20 + A2 + A8): task args and
    # return values are validated against declared Pydantic schemas instead of
    # cloudpickle'd blindly. A malicious coordinator can no longer inject
    # arbitrary pickled code for the worker to execute.
    "pydantic>=2.0.0",
    # qrcode is core starting v2.2 PR 13 (Issue 26): `macfleet join --bootstrap`
    # prints a QR of the fleet token so a second Mac can be paired in 5s via
    # an iPhone camera, no copy-paste required.
    "qrcode>=7.0",
]

[project.optional-dependencies]
torch = ["torch>=2.1.0"]
mlx = ["mlx>=0.5.0"]
yaml = ["pyyaml>=6.0"]
all = ["torch>=2.1.0", "mlx>=0.5.0", "pyyaml>=6.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
]
docs = [
    # v2.2 PR 15 (D1): mkdocs-material docs site. Not in core deps because
    # only people building the docs need these; end-users who `pip install
    # macfleet` should not be pulling jinja2/pygments/etc.
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.5.0",
]

[project.scripts]
macfleet = "macfleet.cli.main:cli"

[project.urls]
Homepage = "https://github.com/vikranthreddimasu/MacFleet"
Documentation = "https://github.com/vikranthreddimasu/MacFleet#readme"
Repository = "https://github.com/vikranthreddimasu/MacFleet"
Issues = "https://github.com/vikranthreddimasu/MacFleet/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["macfleet*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E402: intentional lazy imports in macfleet/__init__.py, cli/main.py (keep torch/mlx off hot path)
# E701, E741: stylistic, not bugs — single-letter loop vars legitimate in crypto + ML contexts
ignore = ["E402", "E701", "E741"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
